--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../New folder (2)/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&family=Lexend+Deca&family=Montserrat+Underline:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 <body>
     <div class="box">
         <div class="sebans">
-            <img src="../New folder (2)/images/icon-sedans.svg" alt="">
+            <img src="images/icon-sedans.svg" alt="task1">
            <p class="sebans1">SEBANS</p>
            <p class="sebans2">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
           <br>
@@ -23,7 +23,7 @@
         </div>
 
         <div class="suvs">
-            <img src="../New folder (2)/images/icon-suvs.svg" alt="">
+            <img src="images/icon-suvs.svg" alt="tasks2">
            <p class="suvs1">SUVS</p>
            <p class="suvs2">Take an SUV for the spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
            <br>
@@ -34,7 +34,7 @@
         </div>
         
         <div class="luxury">
-            <img src="../New folder (2)/images/icon-luxury.svg">
+            <img src="images/icon-luxury.svg" alt="tasks2">
             <p class="luxury1">LUXURY</p>
             <p class="luxury2">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
             <br>
